--- a/styles/ProductCard.module.scss
+++ b/styles/ProductCard.module.scss
@@ -14,10 +14,10 @@
 
   &:hover {
     box-shadow: $shadow-hover;
-    .product-card__image {
+    .productCard__image {
       transform: scale(120%);
     }
-    .product-card__head {
+    .productCard__head {
       figcaption {
         h3 {
           font-size: $font-size-xxl;
@@ -47,17 +47,18 @@
   }
 }
 
-.bestPriceIcon,
-.onSalesIcon {
+.bestPrice__icon,
+.onSales__icon {
   display: block;
   position: absolute;
+  width: 60px;
   height: 60px;
   top: spacer(2);
   right: spacer(2);
   z-index: 2;
 }
 
-.product-card__head {
+.productCard__head {
   figcaption {
     position: absolute;
     bottom: spacer(0);
@@ -77,12 +78,12 @@
   }
 }
 
-.product-card__body {
+.productCard__body {
   width: 100%;
   padding: spacer(2);
 }
 
-.product-card__info {
+.productCard__info {
   width: 100%;
   height: 50px;
   font-size: $font-size-md;
@@ -105,28 +106,28 @@
   }
 }
 
-.product-card__price {
+.productPrice {
   text-align: center;
   border-bottom: 1px solid $color-primary;
 }
 
-.product-price--current {
+.productPrice__current {
   font-size: $font-size-xxxl;
-  &.--sales {
+  &.sales {
     color: $color-highlited;
   }
-  &.--good-price {
+  &.goodPrice {
     color: $color-highlited;
   }
 }
 
-.product-price--prev {
+.productPrice__prev {
   text-decoration: line-through;
   color: $color-primary;
   font-size: $font-size-xxl;
 }
 
-.product-card__button {
+.productCard__button {
   margin-top: spacer(3);
   padding: 12px;
   width: 100%;
@@ -138,7 +139,7 @@
     background-color: $color-highlited;
     color: $color-white;
   }
-  &.--disabled {
+  &.disabled {
     background-color: $color-border;
     color: $color-black;
     &:hover {
