--- a/styles/Cart.module.scss
+++ b/styles/Cart.module.scss
@@ -1,10 +1,10 @@
-@import '../../theme/colors.scss';
-@import '../../theme/fonts.scss';
-@import '../../theme/spacing.scss';
-@import '../../theme/variables.scss';
-@import '../../theme/shadows.scss';
+@import '../theme/colors.scss';
+@import '../theme/fonts.scss';
+@import '../theme/spacing.scss';
+@import '../theme/variables.scss';
+@import '../theme/shadows.scss';
 
-.cart-button {
+.cartButton {
   position: relative;
   background-color: transparent;
   &__image {
