--- a/styles/Container.module.scss
+++ b/styles/Container.module.scss
@@ -1,5 +1,5 @@
-@import '../../../theme/spacing.scss';
-@import '../../../theme/variables.scss';
+@import '../theme/spacing.scss';
+@import '../theme/variables.scss';
 
 .container {
   max-width: $breakpoint-xxl;
