--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -71,7 +71,7 @@
       font-size: $font-size-lg;
       text-decoration: underline;
     }
-    .product-price--prev {
+    .productPricePrev {
       font-size: $font-size-lg;
     }
   }
