--- a/styles/PurchaseItem.module.scss
+++ b/styles/PurchaseItem.module.scss
@@ -1,5 +1,5 @@
-@import '../../../theme/colors.scss';
-@import '../../../theme/spacing.scss';
+@import '../theme/colors.scss';
+@import '../theme/spacing.scss';
 
 .purchase {
   position: relative;
