--- a/styles/Chat.module.scss
+++ b/styles/Chat.module.scss
@@ -1,10 +1,10 @@
-@import '../../../theme/colors.scss';
-@import '../../../theme/fonts.scss';
-@import '../../../theme/spacing.scss';
-@import '../../../theme/variables.scss';
-@import '../../../theme/shadows.scss';
+@import '../theme/colors.scss';
+@import '../theme/fonts.scss';
+@import '../theme/spacing.scss';
+@import '../theme/variables.scss';
+@import '../theme/shadows.scss';
 
-.chat-button {
+.chatButton {
   background-color: $ui-06;
   color: $color-white;
   padding: spacer(2) spacer(4);
@@ -116,7 +116,7 @@
       border-radius: spacer(1);
       margin-left: 0;
       margin-right: spacer(4);
-      &.user-message {
+      &.userMessage {
         background: $ui-03;
         margin-left: spacer(4);
         margin-right: 0;
