--- a/styles/Input.module.scss
+++ b/styles/Input.module.scss
@@ -1,9 +1,9 @@
-@import '../../../theme/colors.scss';
-@import '../../../theme/spacing.scss';
-@import '../../../theme/fonts.scss';
-@import '../../../theme/variables.scss';
+@import '../theme/colors.scss';
+@import '../theme/spacing.scss';
+@import '../theme/fonts.scss';
+@import '../theme/variables.scss';
 
-.input-wrapper {
+.wrapper {
   position: relative;
   display: flex;
   align-items: center;
@@ -14,9 +14,9 @@
   border: 2px solid $color-black;
   padding: 0 spacer(3);
   margin: 0 auto;
-  .input__icon {
+  .icon {
     display: block;
-    height: 25px;
+    width: 25px;
     margin-right: spacer(3);
   }
   .input {
