--- a/styles/Loader.module.scss
+++ b/styles/Loader.module.scss
@@ -1,6 +1,6 @@
-@import '../../../theme/colors.scss';
+@import '../theme/colors.scss';
 
-.loader-container {
+.container {
   width: 100%;
   height: 100%;
   min-height: 80px;
